# video-tag-generator

./: .gitignore  AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: video.rs
src-tauri/src/dashscope/: client.rs  mod.rs  types.rs  upload.rs
src/components/: ProcessingStatus.vue  PromptEditor.vue  ResultDisplay.vue  SettingsDialog.vue  VideoSelector.vue
src/stores/: processing.ts  settings.ts
src/types/: index.ts
src/utils/: commands.ts
